quote align/navbar fix

--- a/src/components/Discuss/style.css
+++ b/src/components/Discuss/style.css
@@ -9,7 +9,7 @@ a:hover {
 }
 
 ul {
- padding: 0;
+    padding: 0;
     list-style-type: none;
 }
 
@@ -58,10 +58,38 @@ ul {
 
 /*COMMENT LIST*/
 
-.comment-list-element{
-    margin-top: 25px;
+.comment-list-element.op {
+    margin-left: -20px;
+    font-weight: 700;
     
 }
+
+.comment-list-element{
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.comment-list-element h1 {
+    font-size: 100%;
+    
+}
+
+.comment-list-element h2 {
+    margin-top: -5px;
+    font-size: 100%;
+}
+
+.comment-list-element h3 {
+    margin-top: -5px;
+    font-size: 75%;
+}
+.comment-list-element h4 {
+    font-size: 125%;
+    font-weight: 500;
+    margin-top: 15px;
+    margin-left:15px;
+}
+
 
 /*DASHBOARD LINKS*/
 
