--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -10,8 +10,11 @@ div.quote-container {
     color: white;
     font-size: 700%;
     font-weight: 700;
-    margin-top: 20%;
-    width: 100%;
+     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   width: 80%;
     line-height: 20px;
     letter-spacing: 2px;
     background-color: rgba(0, 0, 0, 0.5);
